@@ -1,3 +1,9 @@
+2010-09-02  Daniel Jacobowitz  <dan@codesourcery.com>
+
+	* config.in, configure: Regenerated.
+	* configure.ac: Check for waitpid.
+	* ser-pipe.c (pipe_close): Wait for the program to exit.
+
 2010-09-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* cli-logging.c: Include gdb_assert.h.
